--- a/Java/EnergyConsumption/EnergyConsumption/EnergyConsumptionEEWeb/src/resources/application.properties
+++ b/Java/EnergyConsumption/EnergyConsumption/EnergyConsumptionEEWeb/src/resources/application.properties
@@ -84,7 +84,7 @@ unpaid.bills=Unpaid Bills
 all.unpaid.bills=All users with unpaid bills
 search.all.fields=Search all fields
 calculate.your.consume.energy=Organise your energy bills
-footer.creator=© 2016. Created by Ventsislav Nikolov. All rights reserved.
+footer.creator=Â© 2017. Created by Ventsislav Nikolov. All rights reserved.
 
 bill.sum.without.tax=sum without tax
 bill.sum.with.tax=sum with tax
