--- a/Java/EnergyConsumption/EnergyConsumption/EnergyConsumptionEEWeb/src/resources/application.properties
+++ b/Java/EnergyConsumption/EnergyConsumption/EnergyConsumptionEEWeb/src/resources/application.properties
@@ -83,7 +83,7 @@ paid.bills=Paid Bills
 unpaid.bills=Unpaid Bills
 all.unpaid.bills=All users with unpaid bills
 search.all.fields=Search all fields
-calculate.your.consume.energy=Organise your energy bills
+calculate.your.consume.energy=Organize your energy bills
 footer.creator=© 2017. Created by Ventsislav Nikolov. All rights reserved.
 
 bill.sum.without.tax=sum without tax
